--- a/sample_views/local_login.html
+++ b/sample_views/local_login.html
@@ -6,20 +6,21 @@
   <title>회원 가입</title>
  </head>
  <body>
- <form action="http://localhost/register" name="temp" method="post">
+ <form action="http://localhost/login/local" name="temp" method="post">
    <table width="940" style="padding:5px 0 5px 0; ">
       <tr height="2" bgcolor="#FFC8C3"><td colspan="2"></td></tr>
-      <tr>
-         <th> 이름</th>
-         <td><input type="text" name="name"></td>
-      </tr>
 
-         <tr>
-         <th>전화번호</th>
-            <td>
-               <input type="text"name="phone_number"> 
-            </td>
-        </tr>
+       <tr>
+         <th>아이디</th>
+         <td>
+         <input type="text" name="email">
+         <a href='#' style='cursor:help'> korea</a>
+         </td>
+       </tr>
+       <tr>
+         <th>비밀번호</th>
+         <td><input type="password" name="password"> 영문/숫자포함 6자 이상</td>
+       </tr>
            <tr height="2" bgcolor="#FFC8C3"><td colspan="2"></td></tr>
            <tr>
              <td colspan="2" align="center">
